--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "laravel-mix": "^6.0.31",
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^2.2.16"
